--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 <br/>
             </nav>
         </div>
-        <div class="center-footer">
+        <div class="center-footer"><br/>
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
         <x-footer></x-footer></x-formatline> 
         </div>
