--- a/ux201.html
+++ b/ux201.html
@@ -50,7 +50,7 @@
                 <li><a target="_blank" rel="noopener" href="mailto:emilychau.yvo@gmail.com">email</a></li><br/>
             </nav>
         </div>
-        <div class="center-footer">
+        <div class="center-footer"><br/>
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
         <x-footer></x-footer></x-formatline> 
         </div>
