--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <h1>Hi, I'm Emily! </h1>
         <p>I'm a UX designer, community builder and proud first-generation university student.<br/>
         I am a second-year candidate for a degree in a Bachelor's of Design at Wilfrid Laurier University.</p>
-        <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
-        &ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
+        <p>&emsp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
+        &emsp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
         <hr width="30%"><br/>
         <h2>Work Samples</h2>
 
