--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <h1>Who's behind the designs?</h1>
         <div class="row">
         <div class="col-left">
-            <img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC;">
+            <img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC">
             <h2>&emsp;Emily Chau</h2>
             <p>&emsp;aka EC @uxemilyy<br/>&emsp;b.des candidate<br/><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux;">&emsp;<span>ux design @ wlu</span></a></p>
         </div>  
