--- a/glow.html
+++ b/glow.html
@@ -9,13 +9,40 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
 </head>
+<style>
+    .col-left {
+    width: 60%;
+    float: left;
+    padding-right: 10px;
+    padding-top: 50px;
+    }
+
+    .col-right {
+    width: 30%;
+    float: right;
+    padding-left: 20px;
+    }
+
+    h1 {
+    font-family: 'Hammersmith One', sans-serif;
+    font-size: 2em;
+    text-align: left;
+    }
+    
+    h2 {
+    font-family: 'Hammersmith One', sans-serif;
+    font-size: 1em;
+    text-align: left;
+    }
+
+</style>
 <body>
     <main>
         <header>
             <li><a href="index.html" style="position: absolute; left: 20px">☾✩ Emily Chau ☀</a></li>
             <nav style="font-size: 1em; text-align: right">
                 <li><a href="index.html">home</a></li>
-                <li><a href="#ux201"><strong>maker lab 1</strong></a></li>
+                <li><a href="#ux201">maker lab 1</a></li>
                 <li><a href="about.html">about me</a></li>
                 <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
             </nav>
@@ -24,10 +51,11 @@
             <div class="column">
                 <h2>Group Maker Projects (GMP)</h2>
                 <h1>The GLOW Box</h1>
-                <p>The GLOW box is a multipurpose lighting fixture that aims to support users' wellness and productivity.</p>
-                <div class="tag">
-                    Critical Making
-                </div>
+                <p>The GLOW box is a fully functional, multipurpose lighting fixture that supports users' wellness and productivity. It serves to help students be their best selves in the face of daily stressors and their academic studies.</p>
+                <button class="tag">Critical Making</button>
+                <button class="tag">3D Prototyping</button>
+                <button class="tag">Arduino Uno</button>
+                <button class="tag">C++</button>
             </div>
             <div class="column">
                 <img src="https://i.imgur.com/SpU7Foi.png" alt="GMP1 GLOW box, front view of the lightbox" height="250">
