--- a/glow.html
+++ b/glow.html
@@ -37,18 +37,18 @@
 
 </style>
 <body>
+    <header>
+        <li><a href="index.html" style="position: absolute; left: 20px">☾✩ Emily Chau ☀</a></li>
+        <nav style="font-size: 1em; text-align: right">
+            <li><a href="index.html">home</a></li>
+            <li><a href="#ux201">maker lab 1</a></li>
+            <li><a href="about.html">about me</a></li>
+            <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
+        </nav>
+    </header>
     <main>
-        <header>
-            <li><a href="index.html" style="position: absolute; left: 20px">☾✩ Emily Chau ☀</a></li>
-            <nav style="font-size: 1em; text-align: right">
-                <li><a href="index.html">home</a></li>
-                <li><a href="#ux201">maker lab 1</a></li>
-                <li><a href="about.html">about me</a></li>
-                <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
-            </nav>
-        </header>
         <div class="row">
-            <div class="column">
+            <div class="col-left">
                 <h2>Group Maker Projects (GMP)</h2>
                 <h1>The GLOW Box</h1>
                 <p>The GLOW box is a fully functional, multipurpose lighting fixture that supports users' wellness and productivity. It serves to help students be their best selves in the face of daily stressors and their academic studies.</p>
@@ -57,9 +57,26 @@
                 <button class="tag">Arduino Uno</button>
                 <button class="tag">C++</button>
             </div>
-            <div class="column">
-                <img src="https://i.imgur.com/SpU7Foi.png" alt="GMP1 GLOW box, front view of the lightbox" height="250">
+            <div class="col-right">
+                <img src="https://i.imgur.com/SpU7Foi.png" alt="GMP1 GLOW box, front view of the lightbox" height="250" border-radius="5px">
             </div>
+        </div>
+        <hr width="30%"><br/>
+        <div class="row">
+            <div class="column">
+                <h2>Project Overview</h2>
+                <p>Our task was to “hack” the concept of a box, reimagining its size, shape and configuration in the form of a 3D proof-of-concept prototype. We took into consideration the accessibility of the prototype, its construction using sustainably sourced (i.e. recycled, repurposed, already owned) materials, and following the critical making process. </p>
+                <p>We reimagined the box as a multipurpose and fully functional light fixture, designed to address the need for affordable yet customizable pieces of room decor. It would help to support different aspects of students’ lives–including their mood, mental health, and productivity habits.</p>
+            </div>
+            <div class="column">
+                <h2>Timeline</h2>
+                <p>October to December 2023</p>
+                <h2>Deliverables</h2>
+                <p>Project Brief<br/>Prototype<br/>Presentation<br/>Written Report</p>
+                <h2>Skills and Tools</h2>
+                <p>Figma<br/>Visual Design<br/>Arduino IDE<br/>Wiring<br/>Woodworking<br/>Prototype Construction<br/></p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="links-footer">
