--- a/glow.html
+++ b/glow.html
@@ -14,7 +14,6 @@
     width: 60%;
     float: left;
     padding-right: 10px;
-    padding-top: 50px;
     }
 
     .col-right {
@@ -33,6 +32,10 @@
     font-family: 'Hammersmith One', sans-serif;
     font-size: 1em;
     text-align: left;
+    }
+
+    .col-tri {
+        
     }
 
 </style>
@@ -73,7 +76,9 @@
                 <p>October to December 2023</p>
                 <h2>Deliverables</h2>
                 <p>Project Brief<br/>Prototype<br/>Presentation<br/>Written Report</p>
-                <h2>Skills and Tools</h2>
+            </div>
+            <div class="column">
+            <h2>Skills and Tools</h2>
                 <p>Figma<br/>Visual Design<br/>Arduino IDE<br/>Wiring<br/>Woodworking<br/>Prototype Construction<br/></p>
             </div>
         </div>
