--- a/glow.html
+++ b/glow.html
@@ -34,10 +34,6 @@
     text-align: left;
     }
 
-    .col-tri {
-        
-    }
-
 </style>
 <body>
     <header>
@@ -66,7 +62,7 @@
         </div>
         <hr width="30%"><br/>
         <div class="row">
-            <div class="column">
+            <div class="col-left">
                 <h2>Project Overview</h2>
                 <p>Our task was to “hack” the concept of a box, reimagining its size, shape and configuration in the form of a 3D proof-of-concept prototype. We took into consideration the accessibility of the prototype, its construction using sustainably sourced (i.e. recycled, repurposed, already owned) materials, and following the critical making process. </p>
                 <p>We reimagined the box as a multipurpose and fully functional light fixture, designed to address the need for affordable yet customizable pieces of room decor. It would help to support different aspects of students’ lives–including their mood, mental health, and productivity habits.</p>
