--- a/glow.html
+++ b/glow.html
@@ -22,6 +22,12 @@
     padding-left: 20px;
     }
 
+    .col-20 {
+        width: 20%;
+        float: right;
+        padding-left: 20px;
+    }
+
     h1 {
     font-family: 'Hammersmith One', sans-serif;
     font-size: 2em;
@@ -67,13 +73,13 @@
                 <p>Our task was to “hack” the concept of a box, reimagining its size, shape and configuration in the form of a 3D proof-of-concept prototype. We took into consideration the accessibility of the prototype, its construction using sustainably sourced (i.e. recycled, repurposed, already owned) materials, and following the critical making process. </p>
                 <p>We reimagined the box as a multipurpose and fully functional light fixture, designed to address the need for affordable yet customizable pieces of room decor. It would help to support different aspects of students’ lives–including their mood, mental health, and productivity habits.</p>
             </div>
-            <div class="column">
+            <div class="col-20">
                 <h2>Timeline</h2>
                 <p>October to December 2023</p>
                 <h2>Deliverables</h2>
                 <p>Project Brief<br/>Prototype<br/>Presentation<br/>Written Report</p>
             </div>
-            <div class="column">
+            <div class="col-20">
             <h2>Skills and Tools</h2>
                 <p>Figma<br/>Visual Design<br/>Arduino IDE<br/>Wiring<br/>Woodworking<br/>Prototype Construction<br/></p>
             </div>
