add aims and objectives content

--- a/glow.html
+++ b/glow.html
@@ -40,6 +40,10 @@
     text-align: left;
     }
 
+    img {
+        border-radius: 5px;
+    }
+
 </style>
 <body>
     <header>
@@ -63,7 +67,7 @@
                 <button class="tag">C++</button>
             </div>
             <div class="col-right">
-                <img src="https://i.imgur.com/SpU7Foi.png" alt="GMP1 GLOW box, front view of the lightbox" height="250" border-radius="5px">
+                <img src="https://i.imgur.com/SpU7Foi.png" alt="GMP1 GLOW box, front view of the lightbox" height="300">
             </div>
         </div>
         <hr width="30%"><br/>
@@ -75,7 +79,7 @@
             </div>
             <div class="col-20">
                 <h2>Timeline</h2>
-                <p>October to December 2023</p>
+                <p>Oct to Dec 2023</p>
                 <h2>Deliverables</h2>
                 <p>Project Brief<br/>Prototype<br/>Presentation<br/>Written Report</p>
             </div>
@@ -84,6 +88,35 @@
                 <p>Figma<br/>Visual Design<br/>Arduino IDE<br/>Wiring<br/>Woodworking<br/>Prototype Construction<br/></p>
             </div>
         </div>
+        <hr width="30%"><br/>
+        <h2>Aims and Objectives</h2>
+        <div class="row">
+            <div class="col-left">
+                <p>The aim was to create a box that provides storage, has re-usable writing surfaces, and incorporates ambient lighting.</p>
+            </div>
+            <div class="col-20">
+                <button class="tag">Support Wellness</button>
+                <button class="tag">Support Productivity</button>
+                <button class="tag">Fully Customizable</button>
+            </div>
+            <div class="col-20">
+                <button class="tag">Affordable</button>
+                <button class="tag">Sustainable</button>
+                <button class="tag">Accessible and Ergonomic</button>
+            </div>
+        </div>
+        <h2>The Design Process</h2>
+        <p>The steps in the design process followed the stages outlined in Ratto's critical making process. It begins with the first stage of “mining ideas”.</p>
+        <h2>1. Mining for Ideas</h2>
+        <h2>Sketches and Brainstorming</h2>
+        <h2>2. Designing and Building</h2>
+        <h2>Materials & Tools</h2>
+        <h2>Building the Prototype</h2>
+        <h2>Final Prototype</h2>
+        <h2>3. Reconfiguration and Conversation</h2>
+        <h2>Challenges Encountered</h2>
+        <h2>What Worked & What Didn't</h2>
+        <h2>Footnotes</h2>
     </main>
     <footer>
         <div class="links-footer">
