--- a/glow.html
+++ b/glow.html
@@ -58,7 +58,7 @@
     <main>
         <div class="row">
             <div class="col-left">
-                <h2>Group Maker Projects (GMP)</h2>
+                <h2>Group Maker Project (GMP) 1</h2>
                 <h1>The GLOW Box</h1>
                 <p>The GLOW box is a fully functional, multipurpose lighting fixture that supports users' wellness and productivity. It serves to help students be their best selves in the face of daily stressors and their academic studies.</p>
                 <button class="tag">Critical Making</button>
@@ -115,8 +115,27 @@
         <h2>Final Prototype</h2>
         <h2>3. Reconfiguration and Conversation</h2>
         <h2>Challenges Encountered</h2>
+        <p>&emsp;A notable struggle in the construction of the prototype was dealing with the magnetism and small size of the magnets. It was a difficult balance to evenly arrange them into clusters. Ultimately, it was a poor choice to connect the modular pieces together with magnetic attachments. They did not snap and connect together easily as anticipated. It ended up being more of an accessibility barrier to certain users, rather than the assistive feature we intended.</p>
+        <p>&emsp;To deal with the strong magnetism and the messiness of the super glue, the magnets were spaced far apart and atop a parchment paper workspace. Most importantly, the process was not rushed and an ample amount of time was allotted for glue to dry. Upon reflection for future iterations of the prototype, we could experiment with other methods of attaching the modules of this build.</p>
         <h2>What Worked & What Didn't</h2>
         <h2>Footnotes</h2>
+        <sup>1</sup>Lighting has been shown to affect mood and learning (LeGates et al. 443)
+        <sup>2</sup>Lighting plays a role in Seasonal Affective Disorder (LeGates et al. 443)
+        <sup>3</sup>Shortened day lengths (less light) can cause mental health issues as well as depression and reduced cognitive function (LeGates et al. 443)
+        <sup>4</sup>Ambient lighting can help reduce negative moods (Hsieh 715)
+        <sup>5</sup>Warmer coloured illuminance tended to have a greater effect on mitigating negative moods (Hsieh 715)
+        <sup>6</sup>Use of to-do lists in conjunction with encouragement can support positive feelings, task focus, and less stress (Burke et al. 34)
+        <h1>Reflections</h1>
+        <h2>Accomplishments in the Projects</h2>
+        <p>&emsp;Through my involvement in these projects, my team and I were able to achieve the goals set out for each of the respective projects. The first project’s goal was to “hack” the concept of a traditional box, accomplished through its modular build and multipurpose functionality. The goal of the second was to address a chosen social issue of concern: mental health stigma. The GLOW box 2.0 was incorporated into the development of educational mental health workshops as an “object to think with”.</p>
+        <p>&emsp;Both the projects embody the ethos of socially responsible design in their conceptualization and construction. However, each of the GLOW box prototypes approaches those principles in slightly different manners. The original GLOW box prototype was constructed using sustainable materials, it was designed with accessibility in mind and with the clear purpose of supporting users mental health and wellness. The GLOW box 2.0 prototype was designed to support mental health education, foster collaborative community engagement, and with accessible design in mind. The second itineration of this prototype possessed a higher level of technicality and was a more structurally refined design.</p>
+        <h2>Involvement in the Design Process</h2>
+        <p>&emsp;From my involvement in the critical making process of both Group Maker Lab projects, I learnt more about the issues of concern that we were trying to address through our prototypes. By reading up on those topics and performing many searches for relevant literature, this helped to support the validity of our claims. It also aided with our communication of the prototypes’ functionality and how they aim to address the particular goals of each project.</p>
+        <p>&emsp;I learned a lot about textile waste as a sustainability issue in reading news articles and academic papers on the topic. It encapsulates issues concerning consumer waste and commercial thrift store processes. A low proportion (only 10-20%) of textiles are resold within the country in thrift stores. Most (85%) textile items journey directly to landfills before ever reaching donation or charity bins (Jay).</p>
+        <p>&emsp;In researching mental health stigma, stigma reduction practices, and workshop pedagogy, I learned so much about these topics. For example, the use of mental health education as a means to prevent stigma, and other engagement strategies to tackle stigma directly. Through peer-enabled support systems, and the active application of techniques, these can challenge thoughts of stigma and self-stigma. Overall, I learned more about the concepts of socially responsible design and the many principles that comprise it. As a group, we only touched on a few of them (accessibility, mental health and wellness, sustainability, community engagement, etc.) throughout both of the Group Maker Projects.</p>
+        <h2>Evolution as a Designer</h2>
+        <p>&emsp;Overall, the concepts taught in Maker Lab I and its associated projects have positively benefited me in my approach to future challenges. I am equipped with a unique perspective that differs from many other “traditionally” educated UX Designers. The application of a tinkering mindset and the use of the stages of critical making can help to set me apart when tackling design challenges. Each of the projects gave me opportunities to apply what I learned through course readings and lectures.</p>
+        <p>&emsp;In working on both the Group Maker Projects, it offered the unique occasion to exercise my knowledge and to see the proliferation of those concepts during the construction of the prototypes. The making stages gave me the opportunity to work with my hands and feel the satisfaction of constructing the 3D prototypes; it was a nice change of pace from the digital projects typically assigned. During both of the “show and tell” presentations, I was able to rehearse my presentation skills in a low-stakes and supportive environment. I was also able to exercise my design skills in Figma in creating the slide decks for both presentation sessions.</p>
     </main>
     <footer>
         <div class="links-footer">
