--- a/glow.html
+++ b/glow.html
@@ -119,12 +119,13 @@
         <p>&emsp;To deal with the strong magnetism and the messiness of the super glue, the magnets were spaced far apart and atop a parchment paper workspace. Most importantly, the process was not rushed and an ample amount of time was allotted for glue to dry. Upon reflection for future iterations of the prototype, we could experiment with other methods of attaching the modules of this build.</p>
         <h2>What Worked & What Didn't</h2>
         <h2>Footnotes</h2>
-        <sup>1</sup>Lighting has been shown to affect mood and learning (LeGates et al. 443)
-        <sup>2</sup>Lighting plays a role in Seasonal Affective Disorder (LeGates et al. 443)
-        <sup>3</sup>Shortened day lengths (less light) can cause mental health issues as well as depression and reduced cognitive function (LeGates et al. 443)
-        <sup>4</sup>Ambient lighting can help reduce negative moods (Hsieh 715)
-        <sup>5</sup>Warmer coloured illuminance tended to have a greater effect on mitigating negative moods (Hsieh 715)
-        <sup>6</sup>Use of to-do lists in conjunction with encouragement can support positive feelings, task focus, and less stress (Burke et al. 34)
+        <sup>1</sup>Lighting has been shown to affect mood and learning (LeGates et al. 443)</br>
+        <sup>2</sup>Lighting plays a role in Seasonal Affective Disorder (LeGates et al. 443)</br>
+        <sup>3</sup>Shortened day lengths (less light) can cause mental health issues as well as depression and reduced cognitive function (LeGates et al. 443)</br>
+        <sup>4</sup>Ambient lighting can help reduce negative moods (Hsieh 715)</br>
+        <sup>5</sup>Warmer coloured illuminance tended to have a greater effect on mitigating negative moods (Hsieh 715)</br>
+        <sup>6</sup>Use of to-do lists in conjunction with encouragement can support positive feelings, task focus, and less stress (Burke et al. 34)</br>
+        
         <h1>Reflections</h1>
         <h2>Accomplishments in the Projects</h2>
         <p>&emsp;Through my involvement in these projects, my team and I were able to achieve the goals set out for each of the respective projects. The first project’s goal was to “hack” the concept of a traditional box, accomplished through its modular build and multipurpose functionality. The goal of the second was to address a chosen social issue of concern: mental health stigma. The GLOW box 2.0 was incorporated into the development of educational mental health workshops as an “object to think with”.</p>
