--- a/cited.html
+++ b/cited.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | Emily Chau</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="imgs/EC Fav.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
+</head>
 <h1>Works Cited</h1>
 <br/>
 <p>Baxter, Louise, et al. “Community and cultural engagement for people with lived experience of mental health conditions: What are the barriers and enablers?” BMC Psychology, vol. 10, no. 1, 2022, pp. 1–15, https://doi.org/10.1186/s40359-022-00775-y.</p>
