add height restrictions

--- a/glow.html
+++ b/glow.html
@@ -108,7 +108,7 @@
         <section id="gmp1-process">
             <h2>The Design Process</h2>
             <p>The steps in the design process followed the stages outlined in Ratto's critical making process. It begins with the first stage of “mining ideas”.</p>
-            <img src="https://i.imgur.com/hIkWoye.jpg" style="background-size: cover;" alt="Decorative background"> 
+            <img src="https://i.imgur.com/3IwsVoU.jpg" alt="Decorative background" height="100%"> 
             <h2>1. Mining for Ideas</h2>
             <h2>Sketches and Brainstorming</h2>
         </section>
@@ -135,7 +135,7 @@
                 <p>The goal of the GMP2 was to improve upon the original GLOW box prototype by incorporating additional features and functionality. To address mental health stigma as a social issue of concern, we propose to incorporate aspects of DIY, maker culture alongside educational workshops. The proposed workshops aim to guide participants in constructing their GLOW box while also learning about mental health concepts.</p>
             </div>
             <div class="col-left">
-                <img src="https://i.imgur.com/3bkRHyb.png" alt="Front view of the illuminated GLOW Box 2.0, the LCD screen says the time of 1:20pm and the message of 'You got this!!'">
+                <img src="https://i.imgur.com/3bkRHyb.png" alt="Front view of the illuminated GLOW Box 2.0, the LCD screen says the time of 1:20pm and the message of 'You got this!!'" height="300">
             </div>
         
         <h1>Reflections</h1>
