close remaining div

--- a/glow.html
+++ b/glow.html
@@ -137,6 +137,7 @@
             <div class="col-left">
                 <img src="https://i.imgur.com/3bkRHyb.png" alt="Front view of the illuminated GLOW Box 2.0, the LCD screen says the time of 1:20pm and the message of 'You got this!!'" height="300">
             </div>
+        </div>
         
         <h1>Reflections</h1>
         <h2>Accomplishments in the Projects</h2>
@@ -151,9 +152,7 @@
         <p>&emsp;In working on both the Group Maker Projects, it offered the unique occasion to exercise my knowledge and to see the proliferation of those concepts during the construction of the prototypes. The making stages gave me the opportunity to work with my hands and feel the satisfaction of constructing the 3D prototypes; it was a nice change of pace from the digital projects typically assigned. During both of the “show and tell” presentations, I was able to rehearse my presentation skills in a low-stakes and supportive environment. I was also able to exercise my design skills in Figma in creating the slide decks for both presentation sessions.</p>
 
         <h1 id="cited">Works Cited</h1>
-        <p>Baxter, Louise, et al. “Community and cultural engagement for people with lived experience of mental health
-            conditions: What are the barriers and enablers?” <i>BMC Psychology</i>, vol. 10, no. 1, 2022, pp. 1–15, <a
-                href="https://doi.org/10.1186/s40359-022-00775-y">https://doi.org/10.1186/s40359-022-00775-y.</a></p>
+        <p>Baxter, Louise, et al. “Community and cultural engagement for people with lived experience of mental health conditions: What are the barriers and enablers?” <i>BMC Psychology</i>, vol. 10, no. 1, 2022, pp. 1–15, <a href="https://doi.org/10.1186/s40359-022-00775-y">https://doi.org/10.1186/s40359-022-00775-y.</a></p>
     
                 <p>Burke, Adam, et al. “An exploratory study comparing goal-oriented mental imagery with daily to-do lists:
             Supporting college student success.” <i>Current Psychology</i>, vol. 33, no. 1, 2013, pp. 20–34, <a
