set banner image

--- a/glow.html
+++ b/glow.html
@@ -105,13 +105,11 @@
                 <button class="tag">Accessible and Ergonomic</button>
             </div>
         </div>
-        <section id="gmp1-process">
-            <h2>The Design Process</h2>
-            <p>The steps in the design process followed the stages outlined in Ratto's critical making process. It begins with the first stage of “mining ideas”.</p>
-            <img src="https://i.imgur.com/3IwsVoU.jpg" alt="Decorative background" height="300"> 
-            <h2>1. Mining for Ideas</h2>
-            <h2>Sketches and Brainstorming</h2>
-        </section>
+        <h2>The Design Process</h2>
+        <p>The steps in the design process followed the stages outlined in Ratto's critical making process. It begins with the first stage of “mining ideas”.</p>
+        <section id="gmp1-process"></section>
+        <h2>1. Mining for Ideas</h2>
+        <h2>Sketches and Brainstorming</h2>
         <h2>2. Designing and Building</h2>
         <h2>Materials & Tools</h2>
         <h2>Building the Prototype</h2>
@@ -185,7 +183,6 @@
                 <p>Ratto, Matt. “Critical Making: Conceptual and Material Studies in Technology and Social Life.” <i>The
                 Informational Society</i>, vol. 27, no. 4, 2011, pp. 252-­260, <a
                 href="https://doi.org/10.1080/01972243.2011.583819">https://doi.org/10.1080/01972243.2011.583819.</a></p>
-    
     </main>
     <footer>
         <div class="links-footer">
