--- a/glow.html
+++ b/glow.html
@@ -44,6 +44,11 @@
         border-radius: 5px;
     }
 
+    #gmp1-process {
+        background-image: url("https://i.imgur.com/3IwsVoU.jpg");
+        height: 300px;
+    }
+
 </style>
 <body>
     <header>
