--- a/glow.html
+++ b/glow.html
@@ -46,7 +46,7 @@
 
     #gmp1-process {
         background-image: url("https://i.imgur.com/3IwsVoU.jpg");
-        height: 300px;
+        width:fit-content;
     }
 
 </style>
