--- a/glow.html
+++ b/glow.html
@@ -46,6 +46,7 @@
 
     #gmp1-process {
         background-image: url("https://i.imgur.com/3IwsVoU.jpg");
+        width: 900px;
     }
 
 </style>
