--- a/glow.html
+++ b/glow.html
@@ -44,11 +44,6 @@
         border-radius: 5px;
     }
 
-    #gmp1-process {
-        background-image: url("https://i.imgur.com/3IwsVoU.jpg");
-        width: 900px;
-    }
-
 </style>
 <body>
     <header>
@@ -112,7 +107,7 @@
         </div>
         <h2>The Design Process</h2>
         <p>The steps in the design process followed the stages outlined in Ratto's critical making process. It begins with the first stage of “mining ideas”.</p>
-        <section id="gmp1-process"></section>
+        <div id="gmp1-process"></div>
         <h2>1. Mining for Ideas</h2>
         <h2>Sketches and Brainstorming</h2>
         <h2>2. Designing and Building</h2>
