--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <li><a href="index.html" style="position: absolute; left: 20px">☾✩ Emily Chau ☀</a></li>
         <nav style="font-size: 1em; text-align: right">
             <li><a href="index.html">home</a></li>
-            <li><a href="ux201.html">maker lab 1</a></li>
+            <li><a href="glow.html">maker lab 1</a></li>
             <li><a href="#about"><strong>about me</strong></a></li>
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
