--- a/glow.html
+++ b/glow.html
@@ -112,22 +112,22 @@
         <p>In this stage, we used FigJam to brainstorm our ideas and sketch out some preliminary concepts.</p>
         <p>We followed up by doing some research on relevant literature to help further support our design plans and the effectiveness of the prototype.<br/>Topics like lighting and mood, <sup>1, 4, 5</sup>the effects of lighting on seasonal affective disorder <sup>2, 3</sup> and productivity<sup> 6</sup> were explored.</p>
         <h2>Sketches and Brainstorming</h2>
-        <div class="responsive">
-            <div class="responsive">
+        <div class="responsive-gal">
+            <div class="responsive-gal">
                 <div class="gallery" style="margin: 10px; margin-bottom: 40px;">
                     <img src=" https://i.imgur.com/ZdVKWue.png" alt="FigJam board with brainstorming ideas on sticky notes" height="250">
                   </a>
                   <div class="desc">Brainstorming ideas in Figjam</div>
                 </div>
               </div>
-          <div class="responsive">
+          <div class="responsive-gal">
               <div class="gallery" style="margin: 10px; margin-bottom: 40px;">
                   <img src="https://i.imgur.com/OoYijCF.png" alt="First sketches" height="250">
                 </a>
                 <div class="desc">Sketches in Figjam</div>
               </div>
             </div>
-            <div class="responsive">
+            <div class="responsive-gal">
                 <div class="gallery" style="margin: 10px; margin-bottom: 40px;">
                     <img src="https://i.imgur.com/bCv3RE5.png" alt="Refined sketches" height="250">
                   </a>
