--- a/glow.html
+++ b/glow.html
@@ -115,6 +115,39 @@
         <h2>2. Designing and Building</h2>
         <h2>Materials & Tools</h2>
         <h2>Building the Prototype</h2>
+        <p>The building phase was split into a few distinct tasks: creating the base, attaching the picture frames together, assembling the light fixture and wiring, and finally creating the magnetic attachments.</p>
+        <p>First, the shape net for the cardboard base was sketched out and then cut out. The creases were lightly folded to aid in the formation of the box. It was painted to resemble a wood grain pattern and then affixed together using hot glue. To create the mid-section, the edges of the picture frames were scored using an Exacto knife. They were then superglued together in an overlapping fashion, it resembled a rectangular prism with open faces on opposite ends.</p>
+        <div class="responsive">
+            <div class="gallery">
+                <img src="https://i.imgur.com/uvv0qhq.png" alt="The edges of the cardboard shape net are being hot glued together to form the shape of a box" width="246">
+              </a>
+              <div class="desc">Assembling the base </div>
+            </div>
+          </div>
+
+          <div class="responsive">
+            <div class="gallery">
+                <img src="https://i.imgur.com/SWp9bxt.png" alt="Plastic picture frame is being scored with an Exacto knife" width="248">
+              </a>
+              <div class="desc">Attaching the panels</div>
+            </div>
+          </div>
+          
+          <div class="responsive">
+            <div class="gallery">
+                <img src="https://i.imgur.com/5LYcUrJ.jpg" alt="Fairy lights wrapped around a fabric covered cardboard tube" height="330">
+              </a>
+              <div class="desc">Wiring the light fixture</div>
+            </div>
+          </div>
+
+          <div class="responsive">
+            <div class="gallery">
+                <img src="https://i.imgur.com/D989rqv.png" alt="Underside of the GLOW box lid, 4 clusters of magnets are embedded into each corner of the square lid." height="230">
+              </a>
+              <div class="desc" style="margin-bottom: 100px;">Assembling the magnetic attachements</div>
+            </div>
+          </div>
         <h2>Final Prototype</h2>
         <h2>3. Reconfiguration and Conversation</h2>
         <h2>Challenges Encountered</h2>
