add in missing div

--- a/glow.html
+++ b/glow.html
@@ -135,6 +135,7 @@
                 <p>Materials, from left to right: Cardboard box, fairy lights, masking tape, hot glue sticks, wooden coaster, plastic picture frames, cardboard tube, pillowcases, magnets, superglue. </p>   
                 <p>Tools, from left to right: Drill and drill bits, hot glue gun, ruler, box cutter, scissors</p>
             </div>
+        </div>
         
         <h3>&emsp;Building the Prototype</h3>
         <p>The building phase was split into a few distinct tasks: creating the base, attaching the picture frames together, assembling the light fixture and wiring, and finally creating the magnetic attachments.</p>
