fix image alignment

--- a/glow.html
+++ b/glow.html
@@ -120,13 +120,13 @@
             <div class="col">
                 <div class="responsive">
                     <div class="gallery" style="margin: 35px;">
-                        <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" height="245">
+                        <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" width="600">
                       <div class="desc">Materials used to build the prototype</div>
                     </div>
                   </div>
                 <div class="responsive">
                       <div class="gallery" style="margin: 35px;">
-                          <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" width="350">
+                          <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" width="600">
                         <div class="desc">Tools used during the build</div>
                       </div>
                 </div>
@@ -136,7 +136,7 @@
                 <p>Tools, from left to right: Drill and drill bits, hot glue gun, ruler, box cutter, scissors</p>
             </div>
         </div>
-        
+
         <h3>&emsp;Building the Prototype</h3>
         <p>The building phase was split into a few distinct tasks: creating the base, attaching the picture frames together, assembling the light fixture and wiring, and finally creating the magnetic attachments.</p>
         <p>First, the shape net for the cardboard base was sketched out and then cut out. The creases were lightly folded to aid in the formation of the box. It was painted to resemble a wood grain pattern and then affixed together using hot glue. 
