--- a/glow.html
+++ b/glow.html
@@ -117,19 +117,21 @@
         <h2>Materials & Tools</h2>
         <p>The construction phase began with gathering our materials and the necessary tools. We collected most items from recycling and around our apartments, but we did resort to purchasing some brand new materials or second-hand (if possible).</p>
         <div class="row">
-            <div class="col">
+            <div class="col-20">
                 <div class="responsive">
                     <div class="gallery" style="margin: 15px;">
                         <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" height="600">
                       <div class="desc">Materials used to build the prototype</div>
                     </div>
                   </div>
+            </div>
+            <div class="col-20">
                 <div class="responsive">
-                      <div class="gallery" style="margin: 15px;">
-                          <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" height="600">
-                        <div class="desc">Tools used during the build</div>
-                      </div>
-                </div>
+                    <div class="gallery" style="margin: 15px;">
+                        <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" height="600">
+                      <div class="desc">Tools used during the build</div>
+                    </div>
+              </div>
             </div>
             <div class="col">
                 <p>Materials, from left to right: Cardboard box, fairy lights, masking tape, hot glue sticks, wooden coaster, plastic picture frames, cardboard tube, pillowcases, magnets, superglue. </p>   
