--- a/glow.html
+++ b/glow.html
@@ -117,28 +117,23 @@
         <h2>Materials & Tools</h2>
         <p>The construction phase began with gathering our materials and the necessary tools. We collected most items from recycling and around our apartments, but we did resort to purchasing some brand new materials or second-hand (if possible).</p>
         <div class="row">
-            <div class="col">
+            <div class="column">
                 <div class="responsive">
                     <div class="gallery" style="margin: 15px;">
-                        <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" height="600">
-                      <div class="desc">Materials used to build the prototype</div>
-                    </div>
-                  </div>
+                    <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" height="600">
+                    <div class="desc">Materials used to build the prototype</div>
             </div>
-            <div class="col">
+            <div class="column">
                 <div class="responsive">
                     <div class="gallery" style="margin: 15px;">
-                        <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" height="600">
-                      <div class="desc">Tools used during the build</div>
-                    </div>
-              </div>
+                    <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" height="600">
+                    <div class="desc">Tools used during the build</div>
             </div>
-            <div class="col-20">
+            <div class="column">
                 <p>Materials, from left to right: Cardboard box, fairy lights, masking tape, hot glue sticks, wooden coaster, plastic picture frames, cardboard tube, pillowcases, magnets, superglue. </p>   
                 <p>Tools, from left to right: Drill and drill bits, hot glue gun, ruler, box cutter, scissors</p>
             </div>
         </div>
-
         <h3>&emsp;Building the Prototype</h3>
         <p>The building phase was split into a few distinct tasks: creating the base, attaching the picture frames together, assembling the light fixture and wiring, and finally creating the magnetic attachments.</p>
         <p>First, the shape net for the cardboard base was sketched out and then cut out. The creases were lightly folded to aid in the formation of the box. It was painted to resemble a wood grain pattern and then affixed together using hot glue. 
