--- a/glow.html
+++ b/glow.html
@@ -119,18 +119,17 @@
         <div class="row">
             <div class="responsive">
                     <div class="gallery" style="margin: 15px;">
-                    <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" height="600">
+                    <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" height="80%">
                     <div class="desc">Materials used to build the prototype</div>
             </div>
             </div>
                 <div class="responsive">
                     <div class="gallery" style="margin: 15px;">
-                    <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" height="600">
+                    <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" height="80%">
                     <div class="desc">Tools used during the build</div>
             </div>
             </div>
-                <p>Materials, from left to right: Cardboard box, fairy lights, masking tape, hot glue sticks, wooden coaster, plastic picture frames, cardboard tube, pillowcases, magnets, superglue. </p>   
-                <p>Tools, from left to right: Drill and drill bits, hot glue gun, ruler, box cutter, scissors</p>
+                <p>Materials, from left to right: Cardboard box, fairy lights, masking tape, hot glue sticks, wooden coaster, plastic picture frames, cardboard tube, pillowcases, magnets, superglue. </br>Tools, from left to right: Drill and drill bits, hot glue gun, ruler, box cutter, scissors</p>
             </div>
         </div>
         <h3>&emsp;Building the Prototype</h3>
