--- a/glow.html
+++ b/glow.html
@@ -68,7 +68,7 @@
                 <button class="tag">C++</button>
             </div>
             <div class="col-right">
-                <img src="https://i.imgur.com/SpU7Foi.png" alt="GMP1 GLOW box, front view of the lightbox" height="300">
+                <img src="https://i.imgur.com/SpU7Foi.png" alt="GMP1 GLOW box, front view of the lightbox" height="300"></a>
             </div>
         </div>
         <hr width="30%"><br/>
@@ -119,13 +119,13 @@
         <div class="row">
             <div class="responsive">
                     <div class="gallery" style="margin: 15px;">
-                    <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1">
+                    <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1"></a>
                     <div class="desc">Materials used to build the prototype</div>
             </div>
             </div>
                 <div class="responsive">
                     <div class="gallery" style="margin: 15px;">
-                    <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1">
+                    <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1"></a>
                     <div class="desc">Tools used during the build</div>
             </div>
             </div>
