--- a/glow.html
+++ b/glow.html
@@ -118,14 +118,14 @@
         <p>The construction phase began with gathering our materials and the necessary tools. We collected most items from recycling and around our apartments, but we did resort to purchasing some brand new materials or second-hand (if possible).</p>
         <div class="responsive">
         <div class="gallery" style="margin: 15px;">
-        <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1"></a>
+        <img src="https://i.imgur.com/l6j9ph7.png" alt="Materials used to build the GMP1" width="400"></a>
         <div class="desc">Materials used to build the prototype</div>
         </div>
         </div>
                 
         <div class="responsive">
         <div class="gallery" style="margin: 15px;">
-        <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1"></a>
+        <img src="https://i.imgur.com/cjc8Gmp.png" alt="Tools used to construct the GMP1" width="400"></a>
         <div class="desc">Tools used during the build</div>
         </div>
         </div>
